// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssessmentSummaryDetails render Correct composition 1`] = `
<div
  className="assessmentSummaryDetails"
  role="table"
>
  <div
    className="assessmentSummaryDetailsBody"
    role="rowgroup"
  >
    <div
      className="assessmentSummaryDetailsRow"
      role="row"
    >
      <div
        className="testSummary"
      >
        <div
          className="testSummaryDisplayName"
          role="cell"
        >
          Assessment1
        </div>
        <div
          className="testSummaryStatus"
          data-automation-id="test-summary-status/Assessment1"
          role="cell"
        >
          <OutcomeIconSet
            displayName="Assessment1"
            fail={2}
            incomplete={1}
            pass={1}
          />
        </div>
      </div>
    </div>
    <div
      className="assessmentSummaryDetailsRow"
      role="row"
    >
      <div
        className="testSummary"
      >
        <div
          className="testSummaryDisplayName"
          role="cell"
        >
          Assessment2
        </div>
        <div
          className="testSummaryStatus"
          data-automation-id="test-summary-status/Assessment2"
          role="cell"
        >
          <OutcomeIconSet
            displayName="Assessment2"
            fail={1}
            incomplete={1}
            pass={0}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AssessmentSummaryDetails render Renders an OutcomeChipSet for 8 items 1`] = `
<div
  className="assessmentSummaryDetails"
  role="table"
>
  <div
    className="assessmentSummaryDetailsBody"
    role="rowgroup"
  >
    <div
      className="assessmentSummaryDetailsRow"
      role="row"
    >
      <div
        className="testSummary"
      >
        <div
          className="testSummaryDisplayName"
          role="cell"
        >
          test
        </div>
        <div
          className="testSummaryStatus"
          data-automation-id="test-summary-status/test"
          role="cell"
        >
          <OutcomeChipSet
            displayName="test"
            fail={0}
            incomplete={8}
            pass={0}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AssessmentSummaryDetails render Renders an OutcomeIconSet for 7 items 1`] = `
<div
  className="assessmentSummaryDetails"
  role="table"
>
  <div
    className="assessmentSummaryDetailsBody"
    role="rowgroup"
  >
    <div
      className="assessmentSummaryDetailsRow"
      role="row"
    >
      <div
        className="testSummary"
      >
        <div
          className="testSummaryDisplayName"
          role="cell"
        >
          test
        </div>
        <div
          className="testSummaryStatus"
          data-automation-id="test-summary-status/test"
          role="cell"
        >
          <OutcomeIconSet
            displayName="test"
            fail={0}
            incomplete={7}
            pass={0}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
